# Airulefy

./: 404.html  LICENSE  README.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy-docs.yml  e2e-tests.yml  release.yml  tests.yml
airulefy/: __main__.py
airulefy/generator/: cursor.py
cli_reference/: index.html
configuration/: index.html
contributing/: index.html
devcontainer/: index.html
docs/: cli_reference.md  how_it_works.md
docs/en/: cli_reference.md  configuration.md  contributing.md  devcontainer.md  how_it_works.md  index.md  installation.md  quickstart.md
docs/ja/: cli_reference.md  configuration.md  contributing.md  devcontainer.md  how_it_works.md  index.md  installation.md  quickstart.md
en/: index.html
en/cli_reference/: index.html
en/configuration/: index.html
en/contributing/: index.html
en/devcontainer/: index.html
en/how_it_works/: index.html
en/installation/: index.html
en/quickstart/: index.html
how_it_works/: index.html
installation/: index.html
ja/: index.html
ja/cli_reference/: index.html
ja/configuration/: index.html
ja/contributing/: index.html
ja/devcontainer/: index.html
quickstart/: index.html
scripts/: sync_rules.sh
search/: search_index.json
tests/: test_adapters.py  test_cli.py  test_cli_extended.py  test_config.py  test_cursor_adapter.py  test_e2e.py  test_fsutils.py  test_fsutils_extended.py  test_generator.py  test_generator_errors.py  test_watcher.py  test_watcher_extended.py
(+14 files in other folders)
